Mon Jan  9 20:26:33 2012  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_entries): add document suggested by
	  the thread [ruby-core:41959] [Bug #5859].

Mon Jan  9 20:14:13 2012  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (family_addrinfo): don't require protocol
	  equality.  For example, protocol 0 and IPPROTO_TCP is not problem
	  for TCP.

Mon Jan  9 20:08:52 2012  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (family_addrinfo): return the given
	  addrinfo object.
	  Patch by Ippei Obayashi.  [ruby-dev:45095] [Bug #5845]

Mon Jan  9 19:40:20 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/zlib/test_zlib.rb (TestZlibGzipWriter#test_writer_wrap): set
	  binmode explicitly.

Mon Jan  9 14:42:41 2012  Narihiro Nakamura  <authornari@gmail.com>

	* gc.c: free_slots is changed Singly linked list. clear
	  free_slots before sweep.

Mon Jan  9 07:46:17 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* gc.c: i686-linux needs to define _XOPEN_SOURCE 600 for posix_memalign.

Mon Jan  9 04:24:59 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* gc.c (rb_objspace_free): global_List is allocated with xmalloc.
	  patched by Sokolov Yura.  https://github.com/ruby/ruby/pull/78

	* dln_find.c: remove useless replacement of free.

	* ext/readline/readline.c (readline_attempted_completion_function):
	  strings for readline must allocated with malloc.

	* process.c (run_exec_dup2): use free; see also r20950.

	* re.c (onig_new_with_source): use malloc for oniguruma.

	* vm.c (ruby_vm_destruct): use free for VMs.

	* vm.c (thread_free): use free for threads.

Mon Jan  9 04:24:59 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* dln_find.c: remove useless replacement of free.

	* ext/readline/readline.c (filename_completion_proc_call):
	  matches should use xfree.

	* ext/readline/readline.c (username_completion_proc_call): ditto.

Mon Jan  9 01:12:35 2012  NARUSE, Yui  <naruse@ruby-lang.org>
